--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.36.0
-tensorflow-cpu==2.15.0
-numpy>=1.23
-pillow>=10.0
-pandas>=2.0
+streamlit
+tensorflow==2.12.0
+numpy
+Pillow
+matplotlib
